// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with selected tags 1`] = `
<MultiSelect
  elements={
    Array [
      "foo",
      "bar",
      "baz",
    ]
  }
  filterSelected={[Function]}
  listSize={10}
  onSearch={[Function]}
  onSelect={[Function]}
  onUnselect={[Function]}
  placeholder="search.search_for_tags"
  renderLabel={[Function]}
  selectedElements={
    Array [
      "bar",
    ]
  }
  validateSearchInput={[Function]}
/>
`;

exports[`should render without tags at all 1`] = `
<MultiSelect
  elements={Array []}
  filterSelected={[Function]}
  listSize={10}
  onSearch={[Function]}
  onSelect={[Function]}
  onUnselect={[Function]}
  placeholder="search.search_for_tags"
  renderLabel={[Function]}
  selectedElements={Array []}
  validateSearchInput={[Function]}
/>
`;
